--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,3 @@
-
 #mainTable{
     border-collapse: collapse;
 }
@@ -19,4 +18,83 @@
 
 #table-body tr:not(#statistics):hover{
     background-color: rgba(246, 246, 246, 1);
+}
+
+#clouse-open{
+    content: "";
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+    background-color: firebrick;
+    position: absolute;
+    top: 0px;
+    left: -20px;
+}
+
+#transparent-wind{
+    content: "";
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+    background-color: cyan;
+    position: absolute;
+    top: 20px;
+    left: -20px;
+}
+
+#change-currency{
+    z-index: 10;
+/*    opacity: 0.3;*/
+    width: 230px;
+    height: 500px;
+    padding: 10px;
+    border-radius: 5px 0 0 5px;
+    position: fixed;
+    top: 400px;
+    right: 0px;
+    background-color: aquamarine;
+}
+
+.buttons{
+    height: 100%;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    -moz-flex-direction: row;
+    -ms-flex-direction: row;
+    -o-flex-direction: row;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.currency-button{
+    cursor: pointer;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: -o-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    -moz-flex-direction: column;
+    -ms-flex-direction: column;
+    -o-flex-direction: column;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 5px;
+    width: 60px;
+    height: 28px;
+/*    padding: 10px 0;*/
+    border: black 1px solid;
+    vertical-align: middle;
+}
+
+.currency-button div{
+    align-self: center;
+    text-align: center;
+    display: block;
+    margin: 5px 0;
+    
 }
